src/test/deca/context/valid/declClass-sameFieldClassFieldSuper.deca
class Animal {
    int taille = 3;

    void nombreDeQueues() {
    }
}

class Pangolin extends Animal {
    int taille = 4;
}