src/test/deca/context/invalid/redefinition-wrongType.deca
class Sasuke {
    boolean Konoha(int i) {}
}
class Sakura extends Sasuke {
     Sasuke Konoha(int i) {}
}
{}

